LUCENE-10548: extract ModularPathsExtension and remove Cloneable to dodge odd runtime errors from groovy (?).